srml/support/test/tests/ui/missing_where_param.stderr
error: expected `UncheckedExtrinsic`
 --> $DIR/missing_where_param.rs:7:2
  |
7 |     {}
  |     ^^
